--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,15 @@
-body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
@@ -17,4 +21,28 @@ code {
   text-decoration: none;
   color: white;
   font-size: 18px;
+}
+
+button,
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 200px;
+  border: 1px solid #d186f7;
+  background-color: rgb(8, 8, 8);
+  color: white;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  text-align: center;
+  font-family: 'Audiowide', sans-serif;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity ease-in-out 300ms;
+
+  &:hover {
+    border: 2px solid #d186f7;
+    opacity: 1;
+  }
 }
