--- a/src/pages/Explore/Explore.styles.scss
+++ b/src/pages/Explore/Explore.styles.scss
@@ -1,4 +1,18 @@
 .hero {
-  position: relative;
-  top: -15px;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+
+  &-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
