--- a/src/pages/Wallet/Wallet.styles.scss
+++ b/src/pages/Wallet/Wallet.styles.scss
@@ -1,9 +1,10 @@
-.card-container {
+.wallet-container {
   width: 100%;
   height: 100vh;
 
-  .card-button {
+  .wallet {
     position: absolute;
+    left: 10px;
     top: 50%;
   }
 }
