--- a/src/pages/Cards/Cards.styles.scss
+++ b/src/pages/Cards/Cards.styles.scss
@@ -1,6 +1,21 @@
 .card-container {
+  position: relative;
+  background-image: url('../../assets/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100vh;
+
+  &::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: black;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+  }
 
   .card-button {
     position: absolute;
