--- a/src/components/WalletCardItem/WalletCardItem.styles.scss
+++ b/src/components/WalletCardItem/WalletCardItem.styles.scss
@@ -1,10 +1,29 @@
 .cardItem {
-  height: 800px;
-  width: 700px;
+  position: relative;
+  height: 400px;
+  width: 300px;
+  transition: all ease-in-out 300ms;
+  cursor: pointer;
+  overflow: hidden;
+
+  &::after {
+    content: '';
+    position: absolute;
+    opacity: 0.7;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, #fff);
+    transition: 500ms;
+  }
+
+  &:hover::after {
+    left: 100%;
+  }
 
   &-image {
-    display: inline-block;
-    position: relative;
-    z-index: 1000;
+    width: 100%;
+    height: 100%;
   }
 }
