--- a/src/components/layout/Spinner/Spinner.styles.scss
+++ b/src/components/layout/Spinner/Spinner.styles.scss
@@ -10,6 +10,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  p {
+    color: white;
+    margin-left: 1rem;
+  }
 }
 
 .loadingSpinner {
