--- a/src/pages/Cards/Cards.styles.scss
+++ b/src/pages/Cards/Cards.styles.scss
@@ -1,10 +1,11 @@
 .card-container {
   position: relative;
   background-image: url('../../assets/background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat;
+  background-size: contain;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  padding-bottom: 5rem;
 
   &::after {
     content: '';
