--- a/src/pages/Cards/Cards.styles.scss
+++ b/src/pages/Cards/Cards.styles.scss
@@ -1,10 +1,10 @@
 .card-container {
   position: relative;
   background-image: url('../../assets/background.jpg');
-  background-repeat: repeat;
-  background-size: contain;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   padding-bottom: 5rem;
 
   &::after {
@@ -21,5 +21,11 @@
   .card-button {
     position: absolute;
     top: 50%;
+  }
+
+  .searchBox {
+    height: 40px;
+
+    border-radius: 10px;
   }
 }
