--- a/src/components/layout/Navbar/Navbar.styles.scss
+++ b/src/components/layout/Navbar/Navbar.styles.scss
@@ -4,8 +4,8 @@
   z-index: 1000;
   width: 100%;
   max-width: 1800px;
-  margin: auto;
-  padding: 0 50px;
+  left: 50%;
+  transform: translateX(-50%);
 
   &-list {
     display: flex;
@@ -27,15 +27,37 @@
       display: flex;
 
       .link {
-        padding: 20px;
+        position: relative;
+        margin-right: 30px;
+        cursor: pointer;
+        transition: 500ms;
 
-        span {
-          transition: 500ms;
+        &::after {
+          content: '';
+          width: 100%;
+          height: 2px;
+          background-color: #d186f7;
+          opacity: 0;
+          position: absolute;
+          bottom: -10px;
+          left: 0;
+
+          transition: all ease-in-out 300ms;
         }
+
         &:hover {
-          span {
-            color: #fff;
-            text-shadow: 0 0 10px #fff;
+          color: #fff;
+          text-shadow: 0 0 10px #fff;
+
+          &::after {
+            opacity: 1;
+          }
+        }
+
+        &.active {
+          text-shadow: 0 0 10px #fff;
+          &::after {
+            opacity: 1;
           }
         }
       }
