--- a/src/pages/Wallet/Wallet.styles.scss
+++ b/src/pages/Wallet/Wallet.styles.scss
@@ -4,11 +4,24 @@
 
   .wallet {
     position: absolute;
-    left: 10px;
-    top: 50%;
+    display: flex;
+    flex-direction: column;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10rem;
+    border-radius: 15px;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
 
     button {
-      width: 200px;
+      opacity: 1;
+
+      width: 250px;
+      height: 70px;
+      &:nth-child(1) {
+        margin-bottom: 1rem;
+      }
     }
 
     .balance {
