--- a/src/components/CardList/CardList-styles.scss
+++ b/src/components/CardList/CardList-styles.scss
@@ -27,6 +27,7 @@
       margin-bottom: 1rem;
     }
     .searchBox {
+      border-radius: 7px;
       border: 1px solid white;
       margin-bottom: 5rem;
       background-color: black;
