--- a/src/pages/Wallet/Wallet.styles.scss
+++ b/src/pages/Wallet/Wallet.styles.scss
@@ -1,12 +1,14 @@
 .wallet-container {
   width: 100%;
   height: 100vh;
+  .particles-wrapper {
+    opacity: 1;
+  }
 
   .wallet {
     position: absolute;
     display: flex;
     flex-direction: column;
-
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10rem;
     border-radius: 15px;
@@ -15,8 +17,9 @@
     transform: translateX(-50%);
 
     button {
+      position: relative;
       opacity: 1;
-
+      font-size: 18px;
       width: 250px;
       height: 70px;
       &:nth-child(1) {
