--- a/src/pages/NFTList/NFTList.styles.scss
+++ b/src/pages/NFTList/NFTList.styles.scss
@@ -1,2 +1,11 @@
 .nft-list {
+  .totalCard {
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    top: 250px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+  }
 }
