--- a/src/components/CardList/CardList-styles.scss
+++ b/src/components/CardList/CardList-styles.scss
@@ -1,22 +1,25 @@
 .cardList-container {
   position: relative;
   z-index: 999;
-  max-width: 1400px;
-  margin: auto;
-  padding-top: 10rem;
+  padding: 10rem 5rem;
   text-align: center;
-
-  @media (max-width: 1000px) {
-    max-width: 600px;
-  }
 
   .cardList {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr;
     grid-gap: 3rem;
+    justify-content: center;
+    align-items: center;
 
-    @media (max-width: 1000px) {
+    @media (min-width: 640px) {
       grid-template-columns: repeat(2, 1fr);
+    }
+    @media (min-width: 1024px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (min-width: 1200px) {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 
