--- a/src/pages/NFTList/NFTList.styles.scss
+++ b/src/pages/NFTList/NFTList.styles.scss
@@ -3,9 +3,13 @@
     position: absolute;
     font-size: 20px;
     font-weight: bold;
-    top: 250px;
+    top: 275px;
     left: 50%;
     transform: translateX(-50%);
     color: white;
+
+    @media (min-width: '640px') {
+      top: 250px;
+    }
   }
 }
