--- a/src/pages/Wallet/Wallet.styles.scss
+++ b/src/pages/Wallet/Wallet.styles.scss
@@ -1,20 +1,21 @@
 .wallet-container {
   width: 100%;
   height: 100vh;
-  .particles-wrapper {
-    opacity: 1;
-  }
 
   .wallet {
     position: absolute;
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 10rem;
+    padding: 5rem;
     border-radius: 15px;
     top: 30%;
     left: 50%;
     transform: translateX(-50%);
+
+    @media (min-width: '640px') {
+      padding: 10rem;
+    }
 
     button {
       position: relative;
@@ -33,7 +34,7 @@
 
     .info {
       position: absolute;
-      top: 50px;
+      top: 20px;
       left: 50%;
       transform: translateX(-50%);
       border: black 1px solid;
@@ -42,9 +43,14 @@
       font-size: 18px;
       font-weight: bold;
       text-align: center;
-      padding: 10px;
+      padding: 7px;
       opacity: 0;
       transition: opacity 300ms ease-in-out;
+
+      @media (min-width: '640px') {
+        top: 50px;
+        padding: 10px;
+      }
 
       &.active {
         opacity: 1;
