--- a/src/components/layout/Navbar/Navbar.styles.scss
+++ b/src/components/layout/Navbar/Navbar.styles.scss
@@ -6,6 +6,9 @@
   max-width: 1800px;
   left: 50%;
   transform: translateX(-50%);
+  @media (max-width: 640px) {
+    padding: 0 2rem;
+  }
 
   &-list {
     display: flex;
@@ -25,6 +28,9 @@
 
     .navbar-links {
       display: flex;
+      @media (max-width: 640px) {
+        display: none;
+      }
 
       .link {
         position: relative;
@@ -60,6 +66,78 @@
             opacity: 1;
           }
         }
+      }
+    }
+  }
+}
+
+// FOR HAMBURGER MENU STYLING
+
+.right-side {
+  @media (min-width: 640px) {
+    display: none;
+  }
+  .toggle {
+    cursor: pointer;
+    position: relative;
+
+    .hamburger {
+      &.opened {
+        > span:first-child {
+          transform: rotate(45deg);
+        }
+        > span:nth-child(2) {
+          opacity: 0;
+        }
+        > span:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+
+    .hamburger {
+      > span {
+        display: block;
+        height: 2px;
+        width: 26px;
+        background-color: white;
+        transition: all 300ms ease-in-out;
+        transform-origin: 3px 1px;
+
+        &:not(:last-child) {
+          margin-bottom: 5px;
+        }
+      }
+    }
+    .header__menu {
+      position: absolute;
+      width: 150px;
+      top: calc(100% + 34px);
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 5px;
+      padding: 10px 15px;
+
+      opacity: 0;
+      transform: scale(0.8);
+      transform-origin: top right;
+      transition: all 200ms ease-in-out;
+      .link {
+        display: block;
+        font-size: 14px;
+        color: white;
+        background: transparent;
+        padding: 5px 10px;
+        border-radius: 4px;
+        &:hover {
+          background-color: grey;
+        }
+      }
+
+      &.active {
+        transform: scale(1);
+
+        opacity: 1;
       }
     }
   }
