--- a/src/pages/CardDetail/CardDetail.styles.scss
+++ b/src/pages/CardDetail/CardDetail.styles.scss
@@ -1,6 +1,8 @@
 .cardDetail {
-  padding: 10rem 1rem;
-  height: 100vh;
+  padding-top: 10rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+
   @media (min-width: 1200px) {
     max-width: 1400px;
     margin: auto;
@@ -40,9 +42,8 @@
         }
         img {
           display: block;
-          width: 350px;
+          width: 100%;
           height: 100%;
-          margin: auto;
 
           @media (min-width: 640px) {
             width: 100%;
